# wgbot

./: .dockerignore  .gitignore  DOCKER_README.md  Dockerfile  README.md  api_yookassa.txt  app.py  bot.py  callbacks.py  cascade_api.py  cascade_servers.example.json  cascade_smoke_test.py  check_config.py  clients.json  config.py  custom_clients.py  database.py  deploy-prod.sh  deploy.sh  docker-compose.low-resource.yml  docker-compose.yml  docker-manage.sh  env.docker.example  logging_setup.py  migrate_to_cascade.py  nginx.conf  payment.py  promo.txt  provisioning.py  pyproject.toml  requirements.txt  run.py  runtime_metrics.py  services.py  stars.py  subscription_notifications.py  telegram_runtime.py  utils.py  webhook_server.py  webhook_yookassa_doc.txt  (+4 more)
.github/workflows/: ci.yml  deploy-dev.yml  deploy.yml  rollback.yml
config/: env_example.txt
handlers/: access.py  admin.py  fallback.py  navigation.py  payments.py
runbooks/: production-cascade-migration.md
scripts/: backup_runtime.py  install_cascade_caddy_webhook.py
ssl/: cert.pem  key.pem
tests/: test_backup_runtime.py  test_caddy_patch.py  test_cascade_api.py  test_database.py  test_handler_routing.py  test_logging_setup.py  test_migration.py  test_payment.py  test_runtime_metrics.py  test_services.py  test_subscription_notifications.py  test_telegram_modernization.py  test_utils.py  test_webhook_diagnostics.py  test_yookassa_client.py
