[project]
name = "wgbot"
version = "0.1.0"
description = "Telegram subscription bot for Cascade-managed AmneziaWG access"
requires-python = ">=3.14,<3.15"
dependencies = [
    "aiogram==3.30.0",
    "fastapi==0.139.2",
    "httpx==0.28.1",
    "uvicorn==0.51.0",
]

[dependency-groups]
dev = [
    "coverage==7.15.2",
    "pip-audit==2.10.1",
    "ruff==0.15.22",
]

[tool.ruff]
target-version = "py314"
line-length = 100
exclude = ["Docs"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["SIM105"]

[tool.coverage.run]
branch = true
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = true
